# friendly-copy

./: .prettierignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: tauri-release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: friendly-copy_icon_source.ai  icon.icns
src-tauri/migrations/: 0001_create_copy_action_table.sql  0001_create_copy_job_table.sql
src-tauri/src/: lib.rs  main.rs  robocopy.rs
src/components/: MainArea.tsx  RunningBadge.tsx  Tooltip.tsx
src/components/mainArea/: CopyActionView.tsx  CopyJobCreationForm.tsx  CopyJobCreationPage.tsx  CopyJobEditPage.tsx  CopyJobRunningPage.tsx  CopyJobView.tsx  CopyJobViewPage.tsx  DirPathView.tsx  MainArea.tsx  MainAreaHeader.tsx
src/components/mainArea/CopyActionCreationForm/: CopyActionCreationForm.tsx  DirPathInput.tsx  Input.tsx  ModeInput.tsx
src/components/mainArea/CopyJobCreationForm/: CopyJobCreationForm.tsx
src/components/mainArea/CopyJobForm/: CopyJobForm.tsx  CopyJobFormButton.tsx  (+5 more)
src/components/sidebar/: CopyActionCreationButton.tsx  CopyActionList.tsx  CopyActionListItem.tsx  CopyJobList.tsx  CopyJobListItem.tsx  NewCopyActionButton.tsx  NewCopyJobButton.tsx  Resizer.tsx  Sidebar.tsx
src/contexts/: copyActionContext.tsx  copyJobContext.tsx  copyJobExecutionContext.tsx
src/db/: index.ts
src/hooks/: useCopyAction.ts  useCopyJob.ts  useCopyJobExecution.ts
src/repositories/: copyActionRepository.ts  copyJobRepository.ts
src/schemas/: copyActionSchemas.ts  copyJobSchemas.ts
(+4 files in other folders)
